# instaos

./: .gitignore  alembic.ini  main.py  pyproject.toml
app/: constants.py
app/config/: __init__.py  config.py  exceptions.py  loader.py  models.py  validators.py
app/database/: database.py  db.py  models.py  repository.py  schema.py  session.py
app/drive/: auth.py  indexer.py  scanner.py
app/extractors/: __init__.py  base.py  image_extractor.py  models.py  video_extractor.py
app/indexer/: drive_indexer.py
app/models/: file.py
app/publishers/: __init__.py  base.py  exceptions.py  factory.py  instagram.py  mock.py  models.py  retry.py
app/scanner/: context.py
app/services/: asset_service.py  category_service.py  metadata_service.py  search_service.py  statistics_service.py
app/utils/: categorizer.py
data/: instaos.db
docs/: configuration.md  publishers.md
docs/adr/: ADR-006-Configuration-System.md  ADR-007-Publisher-Abstraction.md
migrations/: README.md  env.py
migrations/versions/: 20260717_01_initial_files_schema.py
tests/: test_asset_service.py  test_configuration.py  test_extractors.py  test_publishers.py  test_search_service.py  test_statistics_service.py
tools/: check_db.py  test_category.py  test_repository.py
