[project]
name = "insta-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2.0",
    "google-api-python-client>=2,<3",
    "google-auth>=2,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1,<2",
    "SQLAlchemy>=2.0,<3.0",
]
