[project]
name = "insta-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2.0",
    "google-api-python-client>=2,<3",
    "google-auth>=2,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1,<2",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<1",
    "mypy>=2,<3",
    "types-PyYAML",
]

[tool.mypy]
python_version = "3.14"

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true